# gwenland-ai

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.disabled  .gwenignore  ArchGLLM_X5.md  ArchGLML.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FORMULA.md  LICENSE  LICENSE.txt  Mensura_Veritatis.md  NewExperiment.md  PRIVACY.md  README.md  ROADMAP.md  glbench_prefill_bottleneck.ipynb  glcuda_prefill_profile.ipynb  glcuda_r256_verify.ipynb  glcuda_t4_validation.ipynb  glcuda_vs_llamacpp_bench.ipynb  glproc_moe_verify.ipynb  old.ptx  patch2.diff  patch_ptx_v5.py
.claude/: settings.local.json
.gwenland/: layout.json  workspace.json
architecture/: AcceleratioStellarum_PhaseB.md  AcceleratioStellarum_Stage3.md  ArchGLML_X2.md
benchmark/: EXPLANATION.md  FORMULA.md  Gwen-Benchmark-2026-06-03_22-00.md  LICENSE  README.md
changelog/: Gwen-Changes-2026-03-06_15-16.md  Gwen-Changes-2026-05-31_18-30.md  Gwen-Changes-2026-05-31_23-00.md  Gwen-Changes-2026-06-01_06-00.md  Gwen-Changes-2026-06-01_12-00.md  Gwen-Changes-2026-06-02_00-00.md  Gwen-Changes-2026-06-02_12-00.md  Gwen-Changes-2026-06-02_18-00.md  Gwen-Changes-2026-06-03_12-00.md  Gwen-Changes-2026-06-03_18-00.md  Gwen-Changes-2026-06-03_20-00.md  math_theory_q4k.md  (+23 more)
glbench/: Cargo.toml  DESIGN.md  README.md  ROADMAP.md
glbench/src/: lib.rs  main.rs
glbench/src/analysis/: bottleneck.rs  ceiling.rs  efficiency.rs  health.rs  mod.rs  roofline.rs  scaling.rs  summary.rs
glbench/src/behavior/: drift.rs  entropy.rs  hallucination.rs  mod.rs  ood.rs  performance.rs  repetition.rs  stall.rs  toxicity.rs
glbench/src/comparison/: engine.rs  hardware.rs  mod.rs  quantization.rs  regression.rs  runs.rs  statistics.rs  trend.rs
glbench/src/core/: metrics.rs  mod.rs  result.rs  schema.rs  session.rs  workload.rs
glbench/src/engine/: adapter.rs  capability.rs  metadata.rs  mod.rs
glbench/src/environment/: bandwidth.rs  cpu.rs  gpu.rs  hardware.rs  memory.rs  mod.rs  runtime.rs  storage.rs
glbench/src/export/: csv.rs  json.rs  markdown.rs  mod.rs
glbench/src/measurement/: bandwidth.rs  memory.rs  mod.rs  raw.rs  throughput.rs  timeline.rs  timing.rs
glbench/src/render/: mod.rs  table.rs  text.rs
glbench/src/runner/: decode.rs  mod.rs  planner.rs  prefill.rs  stress.rs  warmup.rs
glbench/src/storage/: archive.rs  manifest.rs  mod.rs
glbench/src/validation/: deterministic.rs  integrity.rs  mod.rs  numerical.rs  reproducibility.rs
glcli/: Cargo.toml
glcli/src/: main.rs
glcore/: Cargo.toml
glcore/src/: engine_trait.rs  error.rs  lib.rs  runtime.rs  telemetry.rs  tensor.rs  tokenizer.rs  trace.rs
glcore/src/format/: gguf.rs  mod.rs  safetensors.rs
glcuda/: Cargo.toml
glcuda/examples/: bench.rs
glcuda/src/: buffer.rs  cache.rs  dequant.rs  driver.rs  ffi.rs  kv_cache.rs  lib.rs  loader.rs  model.rs  repack.rs  runner.rs  sampler.rs
glcuda/src/kernels/: glcuda.ptx  glcuda_sm75.ptx  mod.rs
glcuda/tests/: forward.rs  parity.rs
glproc/: Cargo.toml
glproc/benches/: attn_probe.rs  moe_threads.rs  q4k_probe.rs  q4k_regime.rs
glproc/src/: attention.rs  engine.rs  kv_cache.rs  lib.rs  loader.rs  memory.rs  model.rs  moe.rs  runner.rs  sampler.rs  simd_strategy.rs  threading.rs  topology.rs
glproc/src/kernels/: mod.rs
glproc/src/kernels/bridge/: mod.rs
glproc/src/kernels/dequant/: mod.rs
glproc/src/kernels/dequant/bf16/: avx2.rs  avx512.rs  mod.rs  scalar.rs
glproc/src/kernels/dequant/f16/: avx2.rs  avx512.rs  scalar.rs
glproc/src/kernels/dequant/q4_0/: avx2.rs  avx512.rs  scalar.rs
glproc/src/kernels/dequant/q4_k/: avx2.rs  avx512.rs  scalar.rs
glproc/src/kernels/dequant/q5_0/: avx2.rs  scalar.rs
glproc/src/kernels/dequant/q6_k/: avx2.rs  scalar.rs
glproc/src/kernels/dequant/q8_0/: avx2.rs  avx512.rs  scalar.rs
glproc/src/kernels/matmul/: avx2.rs  avx512.rs  scalar.rs
glproc/src/kernels/ops/: mod.rs
glproc/src/kernels/ops/attn_accum/: avx2.rs  mod.rs  scalar.rs
glproc/src/kernels/ops/fast_exp/: avx2.rs  avx512.rs  scalar.rs
glproc/src/kernels/ops/rms_norm/: avx2.rs  mod.rs  scalar.rs
glproc/src/kernels/ops/silu/: avx2.rs  mod.rs  scalar.rs
glproc/src/kernels/ops/softmax/: avx2.rs  mod.rs  scalar.rs
glproc/src/kernels/qdot/: mod.rs
glproc/src/kernels/qdot/q4_k/: avx2.rs  mod.rs  scalar.rs  swiglu.rs
glproc/src/kernels/qdot/q5_0/: avx2.rs  scalar.rs
glproc/src/kernels/qdot/q6_k/: avx2.rs  scalar.rs
glproc/src/kernels/qdot/q8_0/: avx2.rs  mod.rs  scalar.rs  vnni.rs
glproc/src/kernels/qdot/q8_k/: mod.rs  scalar.rs
glproc/tests/: kernel_parity.rs  moe_colab.rs  q4k_e2e.rs
(+82 files in other folders)
