[workspace]
members = [
    "glcore",
    "glproc",
    "glcuda",
    "glvulkan",
    "glmetal",
    "glbench",
    "glcli",
    "packages/core",
    "packages/gltui",
    "packages/mcp",
]
resolver = "2"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# The inference hot path must be optimized for speed, not size — "z" would
# undo the M1.5 SIMD/threading work. Everything else stays size-optimized.
[profile.release.package.glproc]
opt-level = 3

[profile.release.package.glcore]
opt-level = 3
