[package]
name = "glcore"
version = "0.1.0"
edition = "2021"
description = "GwenLand AI core: shared types, traits, format parsers, tokenizer"
license-file = "../LICENSE.txt"

[dependencies]
thiserror = "1"
memmap2 = "0.9"
byteorder = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
