[package]
name = "glproc"
version = "0.1.48"
edition = "2021"
description = "GwenLand AI CPU inference engine (source of truth)"
license-file = "../LICENSE"

[dependencies]
glcore = { path = "../glcore" }
num_cpus = "1.16"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]

[[bench]]
name = "moe_threads"
harness = false
