[package]
name = "glproc"
version = "0.1.129"
edition = "2021"
description = "GwenLand AI CPU inference engine (source of truth)"
license-file = "../LICENSE"

[dependencies]
glcore = { path = "../glcore" }
num_cpus = "1.16"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]

[[bench]]
name = "moe_threads"
harness = false

[[bench]]
name = "attn_probe"
harness = false

[[bench]]
name = "q4k_probe"
harness = false
